# mlops_2024

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  contributing.md  pyproject.toml  requirements.in  requirements.txt
creds/: wsl.txt
notebooks/: test_ruff.py
