[tool.poetry]
name = "mlops-2024"
version = "0.1.0"
description = "ML Ops 2024"
authors = ["Valiev Karim"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0" 
ruff = "^0.3.4"

[tool.poetry.group.prod.dependencies]
pandas = "^2.2.2"
scikit-learn = "^1.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

